fix board overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 section.game-container {
     background-color: var(--bg-clr);
-    height: 50vh;
+    /* height: 50vh; */
     width: min(750px, 50%);
     margin: auto;
 }
